--- a/tests/Application.FunctionalTests/Application.FunctionalTests.csproj
+++ b/tests/Application.FunctionalTests/Application.FunctionalTests.csproj
@@ -7,14 +7,14 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <None Remove="appsettings.json" />
+      <None Remove="appsettingsTest.json" />
     </ItemGroup>
 
     <ItemGroup>
-      <Content Include="appsettings.json">
+      <Content Include="appsettingsTest.json">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
-        <CopyToPublishDirectory>Never</CopyToPublishDirectory>
+        <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
       </Content>
 
     </ItemGroup>
