--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,6 +43,8 @@ jobs:
 
     - name: Install .NET
       uses: actions/setup-dotnet@v3
+      with:
+        dotnet-version: '8.x'
 
     - name: Restore solution
       run: dotnet restore
