--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -71,20 +71,20 @@ jobs:
         path: ./src/Web/publish/publish.zip
         if-no-files-found: error
     
-    - name: Create EF Core migrations bundle
-      if: ${{ inputs.build-artifacts == true }}
-      run: |
-        dotnet new tool-manifest
-        dotnet tool install dotnet-ef --prerelease
-        dotnet ef migrations bundle --configuration Release -p ./src/Infrastructure/ -s ./src/Web/ -o efbundle.exe
-        zip -r ./efbundle.zip efbundle.exe
-      env:
-        SkipNSwag: True
+    # - name: Create EF Core migrations bundle
+    #   if: ${{ inputs.build-artifacts == true }}
+    #   run: |
+    #     dotnet new tool-manifest
+    #     dotnet tool install dotnet-ef --prerelease
+    #     dotnet ef migrations bundle --configuration Release -p ./src/Infrastructure/ -s ./src/Web/ -o efbundle.exe
+    #     zip -r ./efbundle.zip efbundle.exe
+    #   env:
+    #     SkipNSwag: True
 
-    - name: Upload EF Core migrations bundle artifact (efbundle)
-      if: ${{ inputs.build-artifacts == true }}
-      uses: actions/upload-artifact@v3
-      with:
-        name: efbundle
-        path: ./efbundle.zip
-        if-no-files-found: error
+    # - name: Upload EF Core migrations bundle artifact (efbundle)
+    #   if: ${{ inputs.build-artifacts == true }}
+    #   uses: actions/upload-artifact@v3
+    #   with:
+    #     name: efbundle
+    #     path: ./efbundle.zip
+    #     if-no-files-found: error
