removed unused params

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,10 +37,12 @@ jobs:
          resourceGroupName: ${{ vars.AZURE_RESOURCE_GROUP_NAME }}
          template: ./.azure/bicep/simple.bicep
          parameters: >
-           environmentName=${{ inputs.environmentName }}
-           sqlAdministratorUsername=${{ vars.AZURE_SQL_ADMINISTRATOR_USERNAME }}
-           sqlAdministratorPassword=${{ secrets.AZURE_SQL_ADMINISTRATOR_PASSWORD }}
-           projectName=${{ vars.PROJECT_NAME }}
+          projectName=${{ vars.PROJECT_NAME }}
+        # parameters: >
+        #    environmentName=${{ inputs.environmentName }}
+        #    sqlAdministratorUsername=${{ vars.AZURE_SQL_ADMINISTRATOR_USERNAME }}
+        #    sqlAdministratorPassword=${{ secrets.AZURE_SQL_ADMINISTRATOR_PASSWORD }}
+        #    projectName=${{ vars.PROJECT_NAME }}
          deploymentMode: Validate
 
      - if: inputs.environmentName != 'Development'
@@ -51,10 +53,12 @@ jobs:
          resourceGroupName: ${{ vars.AZURE_RESOURCE_GROUP_NAME }}
          template: ./.azure/bicep/simple.bicep
          parameters: >
-           environmentName=${{ inputs.environmentName }}
-           sqlAdministratorUsername=${{ vars.AZURE_SQL_ADMINISTRATOR_USERNAME }}
-           sqlAdministratorPassword=${{ secrets.AZURE_SQL_ADMINISTRATOR_PASSWORD }}
-           projectName=${{ vars.PROJECT_NAME }}
+          projectName=${{ vars.PROJECT_NAME }}
+        # parameters: >
+        #    environmentName=${{ inputs.environmentName }}
+        #    sqlAdministratorUsername=${{ vars.AZURE_SQL_ADMINISTRATOR_USERNAME }}
+        #    sqlAdministratorPassword=${{ secrets.AZURE_SQL_ADMINISTRATOR_PASSWORD }}
+        #    projectName=${{ vars.PROJECT_NAME }}
          additionalArguments: --what-if
  
   deploy:
@@ -89,10 +93,12 @@ jobs:
         resourceGroupName: ${{ vars.AZURE_RESOURCE_GROUP_NAME }}
         template: ./.azure/bicep/simple.bicep
         parameters: >
-           environmentName=${{ inputs.environmentName }}
-           sqlAdministratorUsername=${{ vars.AZURE_SQL_ADMINISTRATOR_USERNAME }}
-           sqlAdministratorPassword=${{ secrets.AZURE_SQL_ADMINISTRATOR_PASSWORD }}
-           projectName=${{ vars.PROJECT_NAME }}
+          projectName=${{ vars.PROJECT_NAME }}
+        # parameters: >
+        #    environmentName=${{ inputs.environmentName }}
+        #    sqlAdministratorUsername=${{ vars.AZURE_SQL_ADMINISTRATOR_USERNAME }}
+        #    sqlAdministratorPassword=${{ secrets.AZURE_SQL_ADMINISTRATOR_PASSWORD }}
+        #    projectName=${{ vars.PROJECT_NAME }}
 
     # - name: Initialise database
     #   run: |
